Fix a code style issue "new Integer(int)" -> "Integer.valueOf(int)".